offers text overflow fix

--- a/source/sass/blocks/wysiwyg-wrapper.scss
+++ b/source/sass/blocks/wysiwyg-wrapper.scss
@@ -348,6 +348,7 @@
     font-size: 24px;
     line-height: 24px;
     margin: 0;
+    max-width: 230px;
   }
 
   @media (min-width: $desktop-width) {
@@ -367,6 +368,7 @@
     font-size: 70px;
     line-height: 70px;
     margin: 20px 0 0;
+    max-width: 230px;
   }
 }
 
